# django-honeyguard

./: .coveragerc  .gitignore  .readthedocs.yaml  .readthedocs.yml  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  runtests.py  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  release.yml  tests.yml
django_honeyguard/: __init__.py  admin.py  apps.py  conf.py  forms.py  handlers.py  loggers.py  mixins.py  models.py  services.py  utils.py  views.py
django_honeyguard/locale/ar/LC_MESSAGES/: django.mo
django_honeyguard/locale/be/LC_MESSAGES/: django.mo
django_honeyguard/locale/bg/LC_MESSAGES/: django.mo
django_honeyguard/locale/cs/LC_MESSAGES/: django.mo
django_honeyguard/locale/da/LC_MESSAGES/: django.mo
django_honeyguard/locale/de/LC_MESSAGES/: django.mo
django_honeyguard/locale/el/LC_MESSAGES/: django.mo
django_honeyguard/locale/es/LC_MESSAGES/: django.mo
django_honeyguard/locale/fa/LC_MESSAGES/: django.mo
django_honeyguard/locale/fi/LC_MESSAGES/: django.mo
django_honeyguard/locale/fr/LC_MESSAGES/: django.mo
django_honeyguard/locale/hi/LC_MESSAGES/: django.mo
django_honeyguard/locale/id/LC_MESSAGES/: django.mo
django_honeyguard/locale/it/LC_MESSAGES/: django.mo
django_honeyguard/migrations/: 0001_initial.py
django_honeyguard/templates/django_honeyguard/: base.html  django_admin_login.html  wp_admin_login.html
docs/: Makefile  changelog.rst  configuration.rst  index.rst  installation.rst  requirements.txt
example/: settings.py  urls.py
scripts/: compile_locales.sh  generate_locales.sh
tests/: __init__.py  conftest.py  settings.py  test_admin.py  test_apps.py  test_conf.py  test_constants.py  test_forms.py  test_handlers.py  test_loggers.py  test_models.py  test_services.py  test_signals.py  test_urls.py  test_utils.py  test_views.py
(+12 files in other folders)
